feat: add travel and visit conditions
